AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(t6 ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

# 没有指定QUIET参数, HELLO_FIND_QUIETLY为假
# 指定REQUIRED参数, HELLO_FIND_REQUIRED为真, 意味着此lib为该Project必须
FIND_PACKAGE(HELLO REQUIRED) 
# 下面的HELLO_FOUND  HELLO_INCLUDE_DIR  HELLO_LIBRARY
# 3个变量在FindHELLO.cmake中定义
IF (HELLO_FOUND)
    INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(t6 ${HELLO_LIBRARY})
ENDIF (HELLO_FOUND)

